--- a/avElection/layouts/election-links-directive/election-links-directive.html
+++ b/avElection/layouts/election-links-directive/election-links-directive.html
@@ -54,7 +54,16 @@
       </span>
     </a>
   </li>
-  <li ng-class="{selected: name().indexOf('legal-terms') !== -1}">
+  <li
+    ng-class="{selected: name().indexOf('documentation') !== -1}">
+    <a
+      ui-sref="election.public.show.documentation"
+      ng-i18next="avElection.documentation.title">
+    </a>
+  </li>
+  <li
+    ng-if="election.extra_data.org"
+    ng-class="{selected: name().indexOf('legal-terms') !== -1}">
     <a
       ui-sref="election.public.show.legal"
       ng-i18next="avElection.legal.title">
