fixing powered by

--- a/avElection/layouts/default-election-directive/default-election-directive.html
+++ b/avElection/layouts/default-election-directive/default-election-directive.html
@@ -28,14 +28,8 @@
               <span ng-if="!election.logo_url">
                 <img
                   class="logo-img"
-                  ng-src="/admin/img/nVotes_logo_small.png"
-                >
+                  ng-src="/admin/img/nVotes_logo_small.png">
                 </img>
-              </span>
-              <span
-                ng-i18next="[html:i18next]({url: organization.orgUrl, name: organization.orgName})avCommon.poweredBy"
-                ng-if="!election.logo_url"
-              >
               </span>
             </div>
             <div class="pull-right">
@@ -62,10 +56,7 @@
               >
               </span>
             </div>
-            <div
-              class="text-center"
-              ng-if="election.logo_url"
-            >
+            <div class="text-center">
               <span ng-i18next="[html:i18next]({url: organization.orgUrl, name: organization.orgName})avCommon.poweredBy">
               </span>
             </div>
