--- a/avElection/layouts/election-links-directive/election-links-directive.html
+++ b/avElection/layouts/election-links-directive/election-links-directive.html
@@ -1,4 +1,4 @@
-<ul class="election-links" ng-if="name().indexOf('login') === -1 && name().indexOf('register') === -1">
+<ul class="election-links" ng-if="name().indexOf('login') === -1 && name().indexOf('register') === -1 &&name().indexOf('census-query') === -1">
   <li ng-class="{selected: name().indexOf('home') !== -1}">
     <a
       aria-current="{{name().indexOf('home') !== -1}}"
